# ASTRO

./: .gitignore  .gitmodules  requirements.txt  test.py
.github/: build_publish.yaml
.github/workflows/: build.yaml  build_publish.yaml
Demand_forecasting/: data.ipynb  load.ipynb  predict.csv  prophet.ipynb  requirements.txt  script.py  train.ipynb
backend/: .gitignore  Dockerfile  README.md  order_time.py  pyproject.toml  requirements.txt
frontend/: .gitignore  firebase.json  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/debug/: AndroidManifest.xml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app_router.dart  firebase_options.dart  main.dart
frontend/lib/auth/: edit_profile_page.dart  email_verify_screen.dart  login_screen.dart  profile_page.dart  signup_page.dart  utils.dart
frontend/lib/auth/login/: login_screen.dart
frontend/lib/auth/login/bloc/: login_bloc.dart  login_event.dart
frontend/lib/auth/signup/: signup_screen.dart
frontend/lib/core/config/: firebase_keys.dart  firebase_keys.g.dart
frontend/lib/core/utils/: http_upload.dart
frontend/lib/core/widgets/: custom_button.dart  login_text_field.dart  map_widget.dart
frontend/lib/data_upload/: data_upload.dart
frontend/lib/data_upload/model/: sales_model.dart
frontend/lib/data_upload/widgets/: chart_widget.dart
frontend/lib/home/: home_screen.dart
frontend/lib/model/: user_model.dart
(+4 files in other folders)
